5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1680_2471.log
== TEST (2019-05-03 16:22:49) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

if (0 < id and id <= 130):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	elif (id < 45):
		r = "Medio"
	elif (id >= 45):
		r = "Alto"
		
	print("Entradas:", id, "anos e IMC", imc)
	print("Risco:", r)

else: 
	print("Entradas:", id, "anos e IMC", imc)
	prnt("Dados invalidos")
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    prnt("Dados invalidos")
NameError: name 'prnt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:23:15) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

if (0 < id and id <= 130):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	elif (id < 45):
		r = "Medio"
	elif (id >= 45):
		r = "Alto"
		
	print("Entradas:", id, "anos e IMC", imc)
	print("Risco:", r)

else: 
	print("Entradas:", id, "anos e IMC", imc)
	prnt("Dados invalidos")
	

-- EXECUTION TIME:
0.192678
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/2471/main.py", line 21, in <module>
    prnt("Dados invalidos")
NameError: name 'prnt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:24:17) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

if (0 < id and id <= 130):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	else:
		if (id < 45):
			r = "Medio"
		if (id >= 45):
			r = "Alto"
		
	print("Entradas:", id, "anos e IMC", imc)
	print("Risco:", r)

else: 
	print("Entradas:", id, "anos e IMC", imc)
	prnt("Dados invalidos")
	

-- EXECUTION TIME:
0.134929
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/2471/main.py", line 22, in <module>
    prnt("Dados invalidos")
NameError: name 'prnt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:25:48) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

print("Entradas:", id, "anos e IMC", imc)

if (0 < id) and (id <= 130):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	else:
		if (id < 45):
			r = "Medio"
		elif (id >= 45):
			r = "Alto"
		
	print("Risco:", r)

else: 
	prnt("Dados invalidos")
	

-- EXECUTION TIME:
0.136986
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/2471/main.py", line 22, in <module>
    prnt("Dados invalidos")
NameError: name 'prnt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:27:30) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

print("Entradas:", id, "anos e IMC", imc)

if (0 < id) and (id <= 130):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	elif (imc >= 22.0):
		if (id < 45):
			r = "Medio"
		elif (id >= 45):
			r = "Alto"
		
	print("Risco:", r)

else: 
	prnt("Dados invalidos")
	

-- EXECUTION TIME:
0.199736
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/2471/main.py", line 22, in <module>
    prnt("Dados invalidos")
NameError: name 'prnt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:28:38) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

print("Entradas:", id, "anos e IMC", imc)

if (0 < id) and (id <= 130) and (0 < imc):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	elif (imc >= 22.0):
		if (id < 45):
			r = "Medio"
		elif (id >= 45):
			r = "Alto"
		
	print("Risco:", r)

else: 
	prnt("Dados invalidos")
	

-- EXECUTION TIME:
0.148938
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/2471/main.py", line 22, in <module>
    prnt("Dados invalidos")
NameError: name 'prnt' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:30:24) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

print("Entradas:", id, "anos e IMC", imc)

if (0 < id) and (id <= 130) and (0 < imc):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	elif (imc >= 22.0):
		if (id < 45):
			r = "Medio"
		elif (id >= 45):
			r = "Alto"
		
	print("Risco:", r)

else: 
	print("Dados invalidos")
	

-- EXECUTION TIME:
0.143655
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:33:24) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

print("Entradas:", id, "anos e IMC", imc)

if (0 < id) and (id <= 130) and (0 < imc):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	else:
		if (id < 45):
			r = "Medio"
		elif (id >= 45):
			r = "Alto"
		
	print("Risco:", r)

else: 
	print("Dados invalidos")
	

-- EXECUTION TIME:
0.140367
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:33:33) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

print("Entradas:", id, "anos e IMC", imc)

if (0 < id) and (id <= 130) and (0 < imc):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	else:
		if (id < 45):
			r = "Medio"
		elif (id >= 45):
			r = "Alto"
		
	print("Risco:", r)

else: 
	print("Dados invalidos")
	

-- EXECUTION TIME:
0.170954
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:33:49) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

print("Entradas:", id, "anos e IMC", imc)

if (0 < id) and (id <= 130) and (0 < imc):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	else:
		if (id < 45):
			r = "Medio"
		elif (id >= 45):
			r = "Alto"
		
	print("Risco:", r)

else: 
	prin("Dados invalidos")
	

-- EXECUTION TIME:
0.129085
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1680/2471/main.py", line 22, in <module>
    prin("Dados invalidos")
NameError: name 'prin' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-03 16:33:58) 
-- CODE:
id = int(input("DIGITE ASUA IDADE: "))
imc = float(input("DIGITE SEU INDICE DE MASSA CORPORAL: "))

print("Entradas:", id, "anos e IMC", imc)

if (0 < id) and (id <= 130) and (0 < imc):
	
	if (imc < 22.0):
		if (id < 45):
			r = "Baixo"
		elif (id >= 45):
			r = "Medio"
	else:
		if (id < 45):
			r = "Medio"
		elif (id >= 45):
			r = "Alto"
		
	print("Risco:", r)

else: 
	print("Dados invalidos")
	

-- EXECUTION TIME:
0.194384
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
